Ingress-Control/Project/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mysql
spec:
  ports:
    - port: 3306
  selector:
    app: mysql
  clusterIP: None

---
apiVersion: v1
kind: Service
metadata:
  name: fireworks-service

spec:
  selector:
    app: fireworks-app

  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080

  type: ClusterIP
