Ingress-Control/Project/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: fireworks-ingress

spec:
  rules:
  - host: fireworks.local

    http:
      paths:
      - path: /
        pathType: Prefix

        backend:
          service:
            name: fireworks-service

            port:
              number: 8080
